fix: remove letter-spacing from all lists

--- a/packages/xm_dkfz_net_site/Resources/Private/Scss/components/basic-elements.scss
+++ b/packages/xm_dkfz_net_site/Resources/Private/Scss/components/basic-elements.scss
@@ -88,7 +88,6 @@ ul.list.contacts {
 
 ul, ol {
     font-family: var(--font-family-sans-serif);
-    letter-spacing: 0.6px;
     padding-left: var(--list-indent, 1rem);
     margin-bottom: var(--list-margin, 1rem);
 
